--- a/image_cropper-4.0.1/pubspec.yaml
+++ b/image_cropper-4.0.1/pubspec.yaml
@@ -22,9 +22,13 @@ dependencies:
   flutter:
     sdk: flutter
   image_cropper_platform_interface: #^4.0.0
-    path: ../image_cropper_platform_interface-4.0.0
+    git:
+      url: https://github.com/UrosTodosijevic/cropper_libraries.git
+      path: image_cropper_platform_interface-4.0.0
   image_cropper_for_web: #^2.0.0
-    path: ../image_cropper_for_web-2.0.0
+    git:
+      url: https://github.com/UrosTodosijevic/cropper_libraries.git
+      path: image_cropper_for_web-2.0.0
 
 dev_dependencies:
   flutter_test:
